Replaced old files with new versions

--- a/index.html
+++ b/index.html
@@ -90,27 +90,25 @@
         <div class="projects-row">
             <div class="project-card">
                 <img src="Project1.png" alt="">
-                <h3>Project 1</h3>
-                <p>Get gold medal from answering science questions.</p>
+                <h3>Get gold medal from answering science questions</h3>
                 <div class="btn-group">
-                    <a href="https://www.canva.com/design/DAGBdsYWEKI/rfezXNOKCBAHYtBMJFjiCg/edit?utm_content=DAGBdsYWEKI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">Canva</a>              
+                    <a href="https://www.canva.com/design/DAF0OnJxUSw/kHQpPBjNWkFpoYoG1swLtw/edit" target="_blank" class="btn">Canva</a>              
                 </div>
             </div>
     
             <div class="project-card">
                 <img src="project2.png" alt="">
-                <h3>Learning about designing UI and develop games</p>
+                <h3>Learning about designing UI and develop games</h3>
                 <div class="btn-group">
-                    <a href="https://www.canva.com/design/DAGBdsYWEKI/rfezXNOKCBAHYtBMJFjiCg/edit?utm_content=DAGBdsYWEKI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">Canva</a>                                
+                    <a href="https://www.canva.com/design/DAF0OnJxUSw/kHQpPBjNWkFpoYoG1swLtw/edit" target="_blank" class="btn">Canva</a>                                
                 </div>
             </div>
     
             <div class="project-card">
                 <img src="project3.png" alt="">
-                <h3>Project 3</h3>
-                <p>Go to compete about making games</p>
+                <h3>Go to compete about making games</h3>
                 <div class="btn-group">
-                    <a href="https://www.canva.com/design/DAGBdsYWEKI/rfezXNOKCBAHYtBMJFjiCg/edit?utm_content=DAGBdsYWEKI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" class="btn">Canva</a>                                
+                    <a href="https://www.canva.com/design/DAF0OnJxUSw/kHQpPBjNWkFpoYoG1swLtw/edit" target="_blank" class="btn">Canva</a>                                
                 </div>
             </div>
         </div>
